[gd_scene load_steps=24 format=3 uid="uid://pgbttetrhhp6"]

[ext_resource type="Script" path="res://Scripts/PlayerFavoriteCardMenu.gd" id="1_f3qfo"]
[ext_resource type="ButtonGroup" uid="uid://beososyiu12nc" path="res://Scripts/suitSelection.tres" id="2_7fcjv"]
[ext_resource type="ButtonGroup" uid="uid://br7v4nidvvlp4" path="res://Scripts/valueSelection.tres" id="3_jlgbb"]
[ext_resource type="Texture2D" uid="uid://bd3eeolp5h22g" path="res://assets/Images/rectangleborderyellow.svg" id="4_1ausm"]
[ext_resource type="PackedScene" uid="uid://cvgijvugy7wxe" path="res://assets/button_scene.tscn" id="5_ih1l5"]
[ext_resource type="Texture2D" uid="uid://bgmppv2cfhcf6" path="res://assets/Images/luckydecklogo.png" id="6_8r48o"]
[ext_resource type="Texture2D" uid="uid://dd6xoy4hk75l0" path="res://assets/Images/CardFronts/cards1-2.png" id="7_qqvy6"]
[ext_resource type="Texture2D" uid="uid://skqe0wti1hj4" path="res://assets/Images/CardFronts/cards1-1.png" id="8_ev2v0"]
[ext_resource type="Texture2D" uid="uid://dyqua4h061bdt" path="res://assets/Images/CardFronts/cards2-2.png" id="9_6kjnu"]
[ext_resource type="Texture2D" uid="uid://djp50bkf568lt" path="res://assets/Images/CardFronts/cards3-2.png" id="10_we5hs"]
[ext_resource type="Texture2D" uid="uid://bblli8752c24p" path="res://assets/Images/CardFronts/cards4-2.png" id="11_geyms"]
[ext_resource type="StyleBox" uid="uid://c2ji6gf4rscq" path="res://assets/style/buttonSelectBox.tres" id="12_0eglg"]
[ext_resource type="Theme" uid="uid://brkyelj36ne10" path="res://Scripts/maintheme.tres" id="13_oxe6j"]
[ext_resource type="Texture2D" uid="uid://dsyec6g04gdst" path="res://assets/Images/Buttons/buttonhighlights.svg" id="14_0v47k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oongi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xf4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4prhw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exmt0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ce6er"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ysnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tupff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bjwkc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0egs"]

[node name="PlayerFavoriteCardMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3qfo")
suitSelect = ExtResource("2_7fcjv")
valueSelect = ExtResource("3_jlgbb")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1ausm")

[node name="mainLayoutCredits" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="Heading Seperator" type="VBoxContainer" parent="mainLayoutCredits"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ButtonLogo" parent="mainLayoutCredits/Heading Seperator" instance=ExtResource("5_ih1l5")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="mainLayoutCredits/Heading Seperator/ButtonLogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.5
offset_top = -279.0
offset_right = 253.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_8r48o")
stretch_mode = 5

[node name="SelectionBox" type="VBoxContainer" parent="mainLayoutCredits"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PlayerHeading" parent="mainLayoutCredits/SelectionBox" instance=ExtResource("5_ih1l5")]
layout_mode = 2
mouse_filter = 1

[node name="PlayerChange" type="HBoxContainer" parent="mainLayoutCredits/SelectionBox/PlayerHeading"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="BackButton" type="Button" parent="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_oongi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7xf4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4prhw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_exmt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ce6er")
text = "<<"

[node name="VBoxContainer" type="VBoxContainer" parent="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange"]
layout_mode = 2
size_flags_vertical = 4

[node name="PlayerDisplay" type="Button" parent="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_oongi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7xf4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4prhw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_exmt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ce6er")
text = "Player 1's"

[node name="FavoriteCard" type="Button" parent="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_oongi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7xf4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4prhw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_exmt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ce6er")
text = "Favorite Card"

[node name="ForwardButton" type="Button" parent="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_oongi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7xf4a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4prhw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_exmt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ce6er")
text = ">>"

[node name="cardSelection" parent="mainLayoutCredits/SelectionBox" instance=ExtResource("5_ih1l5")]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" parent="mainLayoutCredits/SelectionBox/cardSelection" index="0"]
offset_top = -3.0
offset_bottom = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainLayoutCredits/SelectionBox/cardSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_right = 12.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Suit Selection" type="MarginContainer" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Diamond" type="TextureButton" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_7fcjv")
texture_normal = ExtResource("7_qqvy6")
texture_pressed = ExtResource("8_ev2v0")

[node name="Heart" type="TextureButton" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_7fcjv")
texture_normal = ExtResource("9_6kjnu")
texture_pressed = ExtResource("8_ev2v0")

[node name="Spade" type="TextureButton" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_7fcjv")
texture_normal = ExtResource("10_we5hs")
texture_pressed = ExtResource("8_ev2v0")

[node name="Club" type="TextureButton" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/Suit Selection/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_7fcjv")
texture_normal = ExtResource("11_geyms")
texture_pressed = ExtResource("8_ev2v0")

[node name="MarginContainer" type="MarginContainer" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="values" type="GridContainer" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
columns = 7

[node name="1" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_jlgbb")
text = "A"

[node name="2" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "2"

[node name="3" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "3"

[node name="4" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "4"

[node name="5" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "5"

[node name="6" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "6"

[node name="7" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "7"

[node name="8" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "8"

[node name="9" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "9"

[node name="10" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "10"

[node name="Control" type="Control" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
layout_mode = 2

[node name="11" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "J"

[node name="12" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "Q"

[node name="13" type="Button" parent="mainLayoutCredits/SelectionBox/cardSelection/VBoxContainer/MarginContainer/HBoxContainer/values"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ysnj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tupff")
theme_override_styles/pressed = ExtResource("12_0eglg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bjwkc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0egs")
toggle_mode = true
button_group = ExtResource("3_jlgbb")
text = "K"

[node name="Start Game" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("13_oxe6j")
theme_override_font_sizes/font_size = 80
text = "Start Game"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Start Game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.01
anchor_right = 0.999
anchor_bottom = 0.99
offset_left = 0.28
offset_top = 2.0
offset_right = -0.280029
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_0v47k")
expand_mode = 1

[node name="ReturnDoubleCheck" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.818
anchor_right = 1.0
anchor_bottom = 0.897656
offset_top = -0.0400391
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("13_oxe6j")
theme_override_font_sizes/font_size = 60
text = "Return"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ReturnDoubleCheck"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.01
anchor_right = 0.999
anchor_bottom = 0.99
offset_left = 0.28
offset_top = 2.0
offset_right = -0.280029
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_0v47k")
expand_mode = 1

[connection signal="pressed" from="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="mainLayoutCredits/SelectionBox/PlayerHeading/PlayerChange/ForwardButton" to="." method="_on_forward_button_pressed"]
[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ReturnDoubleCheck" to="." method="_on_return_double_check_pressed"]

[editable path="mainLayoutCredits/SelectionBox/cardSelection"]
